<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:orientation="vertical"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            app:title="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/input"
            android:textAppearance="@style/MyTheme.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFishMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_fish_mass"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/ilInputFishMass"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias=".0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ilInputFishMass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilInputFishMass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:suffixText="@string/suffix_fish_mass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputFishMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFishAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_fish_amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/ilInputFishAmount"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias=".0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ilInputFishAmount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilInputFishAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/ilInputFishMass"
                app:suffixText="@string/suffix_fish_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputFishAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFrequencyFeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_frequency_feeding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/ilInputFrequencyFeed"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias=".0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ilInputFrequencyFeed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilInputFrequencyFeed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/ilInputFishAmount"
                app:suffixText="@string/suffix_frequency_feeding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputFrequencyFeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPoolTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_pool_temperature"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/ilInputPoolTemperature"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias=".0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ilInputPoolTemperature" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilInputPoolTemperature"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/ilInputFrequencyFeed"
                app:suffixText="@string/suffix_pool_temperature">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputPoolTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPoolOxygenLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_pool_oxygen_level"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/ilInputPoolOxygenLevel"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias=".0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ilInputPoolOxygenLevel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilInputPoolOxygenLevel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/ilInputPoolTemperature"
                app:suffixText="@string/suffix_pool_oxygen_level">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInputPoolOxygenLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ilInputPoolOxygenLevel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnCalculate"
        style="@style/MyTheme.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>