<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:orientation="vertical"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            app:title="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/output"
            android:textAppearance="@style/MyTheme.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:contentPadding="16dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAmountFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output_amount_fish_food" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutputAmountFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MyTheme.OutputText"
                    tools:text="68.5gr" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:contentPadding="16dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvFeedingRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output_feeding_rate" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOutputFeedingRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MyTheme.OutputText"
                    tools:text="3.86%" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>